# libretro-mkscumm

./: README.rst  pyproject.toml
libretro_mkscumm/: __main__.py
libretro_scummvm_playlist/: __main__.py
tests/: test_libretro_mkscumm.py
